--- a/views/event.erb
+++ b/views/event.erb
@@ -13,18 +13,32 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" crossorigin="anonymous">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
-
-    <title>EventBite</title>
   </head>
   <body>
-
-    <div class="container mt-5">
-      <%= yield %>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h3><%= @events[:date] %></h3>
+                <h2><%= @events[:title] %></h2>
+                <%= @events[:description] %>
+                <br>
+                <br>
+                <br>
+                <h3>RSVPs</h3>
+            </div>
+            <div class="col">
+                <h4>When?</h4>
+                <%= @events[:date] %>
+                <h4>Where?</h5>
+                <%= @events[:location] %>
+            </div>
+        </div>
     </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -33,3 +47,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
+
